<resources>
    <string name="app_name" translatable="false">MoLe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_subtitle" translatable="false">dam+google@ktnx.net</string>
    <string name="nav_transactions_title">Transactions</string>
    <string name="nav_reports_title">Reports</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_backend">Backend server</string>
    <string name="pref_title_use_http_auth">Enable HTTP authentication</string>
    <string name="pref_description_use_http_auth_on">Use HTTP authentication (basic) when connecting to the backend</string>
    <string name="pref_description_use_http_auth_off">Use plain HTTP without authentication when connecting to the backend</string>
    <string name="pref_title_backend_url">Backend URL</string>
    <string name="pref_default_backend_url" translatable="false">https://server/loc</string>
    <string name="pref_title_backend_auth_user">Username</string>
    <string name="pref_title_backend_auth_password">Password</string>
    <string name="title_activity_new_transaction">New Transaction</string>
    <string name="new_transaction_account_hint">Account</string>
    <string name="new_transaction_date_hint">today</string>
    <string name="new_transaction_amount_hint">0.00</string>
    <string name="msg_at_least_two_accounts_are_required">At least two accounts are required</string>
    <string name="err_bad_backend_url">Invalid backend URL</string>
    <string name="err_net_io_error">Network I/O error</string>
    <string name="err_http_error">HTTP error</string>
    <string name="err_net_error">Network error</string>
    <string name="progress_connecting">Connecting…</string>
    <string name="new_transaction_description_hint">Description</string>
    <string name="account_summary_title">Accounts</string>
    <string name="menu_acc_summary_refresh_title">Refresh</string>
    <string name="menu_acc_view_transactions">View transactions</string>
    <string name="menu_hide_acc_condensed_title">Hide</string>
    <string name="menu_acc_summary_show_only_starred_title">Show only starred</string>
    <string name="err_bad_auth">Invalid username or password</string>
    <string name="action_reset_new_transaction_activity_title">Reset</string>
    <string name="interface_pref_header_title">Interface</string>
    <string name="pref_show_only_starred_off_summary">Account list contains all accounts</string>
    <string name="pref_show_only_starred_on_summary">Only starred accounts are shown</string>
    <string name="menu_acc_summary_hide_selected_title">Hide selected accounts</string>
    <string name="menu_acc_summary_cancel_selection_title">Cancel selection</string>
    <string name="menu_acc_summary_confirm_selection_title">Confirm selection</string>
    <string name="title_activity_transaction_list">Transactions</string>
    <string name="transactions_last_update_label">Last update:</string>
    <string name="transaction_last_update_never">never</string>
    <string name="err_cancelled">Operation cancelled</string>
    <string name="title_profile_list">Profiles</string>
    <string name="title_profile_details">Profile Details</string>
    <string name="profiles">Profiles</string>
    <string name="new_profile_title" type="id">New profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="delete">Delete</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="profile_name_label">Profile name</string>
    <string name="url_label">URL</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_welcome_profile_needed">A profile for connecting to the backend hledger-web instance needs to be created first</string>
    <string name="create_profile_label">Create profile</string>
    <string name="err_profile_name_empty">Profile name cannot be empty</string>
    <string name="err_profile_url_empty">Please enter backend URL, e.g. https://server/location</string>
    <string name="err_profile_user_name_empty">User name is required when authentication is switched on</string>
    <string name="err_profile_password_empty">Password is mandatory</string>
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>Match</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="posting_permitted">Posting of new transactions enabled</string>
    <string name="profile_subtitle_read_only">(Read only)</string>
    <string name="crash_report_contents_label">Crash report contents:</string>
    <string name="crash_dialog_title">MoLe crashed</string>
    <string name="btn_send_crash_report">Send…</string>
    <string name="btn_not_now">Not now</string>
    <string name="crash_app_label">Crash app</string>
    <string name="crash_app_condensed_label">Crash</string>
    <string name="crash_send_question">Would you like to send the crash report to the developer? This would help diagnosing and fixing the problem. The report is sent via email and you can review it before sending.</string>
    <string name="send_crash_via">Send crash report via:</string>
    <string name="btn_show_report">Show report</string>
    <string name="color_label">Color</string>
    <string name="profile_list_rearrange_handle_label">Rearrange items handle</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="default_color_btn">Default</string>
    <string name="profile_color_label">Profile color</string>
    <string name="btn_select_label">Select</string>
    <string name="pref_preferred_autocompletion_account_filter_hint">Filter for transaction auto-completion</string>
    <string name="remove_profile_dialog_message">Permanently remove this profile?</string>
    <string name="Remove">Remove</string>
    <string name="text_loading">Loading…</string>
    <string name="err_invalid_url">Invalid URL</string>
    <string name="btn_color_picker_button">Color picker button</string>
    <string name="insecure_scheme_with_auth">WARNING: Insecure http used with authentication</string>
    <string name="zero_amount">0.00</string>
    <string name="new_transaction_saving">Saving…</string>
    <string name="simulate_save_label">Simulate save requests</string>
    <string name="simulate_save_condensed_label">Simulate saves</string>
    <string name="simulation_label">SIMULATION</string>
    <string name="profile_future_dates_label">Allow input of dates in the future</string>
    <string name="future_dates_none">No future dates are allowed</string>
    <string name="future_dates_7">Up to a week</string>
    <string name="future_dates_14">Up to two weeks</string>
    <string name="future_dates_30">Up to a month</string>
    <string name="future_dates_60">Up to two months</string>
    <string name="future_dates_90">Up to three months</string>
    <string name="future_dates_180">Up to six months</string>
    <string name="future_dates_365">Up to a year</string>
    <string name="future_dates_all">Without restrictions</string>
    <string name="api_html">Version before 1.14</string>
    <string name="api_1_14">Version 1.14</string>
    <string name="api_1_15">Version 1.15</string>
    <string name="api_auto">Automatic</string>
    <string name="profile_api_version_title">Protocol version</string>
    <string name="currency_symbol" translatable="false">¤</string>
    <string name="add_button">Add…</string>
    <string name="close_button">Close</string>
    <string name="transaction_account_comment_hint">comment</string>
    <string name="choose_currency_label">Currency</string>
    <string name="new_currency_name_hint">currency/commodity</string>
    <string name="btn_no_currency">none</string>
    <string name="currency_position_left">Left</string>
    <string name="currency_position_right">Right</string>
    <string name="currency_has_gap">Offset from the value</string>
    <string name="show_currency_input">Currency</string>
    <string name="currency_input_by_default">Commodity input visible by default</string>
    <string name="profile_default_commodity">Default commodity</string>
    <string name="ignoring_preferred_account">No transactions with preferred account found</string>
    <string name="icon">icon</string>
    <string name="show_comments_switch">Comments</string>
    <string name="show_comment_input_by_default">Show comment fields by default</string>
    <string name="filter_menu_title">Filter</string>
    <string name="go_to_date_menu_title">Go to date</string>
    <string name="splash_icon_description">Main app icon</string>
    <string name="sub_accounts_expand_collapse_trigger_description">Sub-accounts expand/collapse trigger</string>
    <string name="transaction_count_summary">%,d transactions as of %s</string>
    <string name="account_count_summary">%,d accounts as of %s</string>
    <string name="server_version_unknown_label">Unknown</string>
    <string name="detected_server_pre_1_20_1">Before 1.20.1</string>
    <string name="detected_version_label">Detected version</string>
    <string name="new_transaction_fab_description">Plus icon</string>
    <string name="api_1_19_1">Version 1.19.1</string>
    <string name="profile_server_version_title">Server version</string>
    <string name="err_json_parser_error">Error parsing packend JSON response. Perhaps the configured API version doesn\'t match</string>
    <string name="btn_profile_options">Configure profile</string>
    <string name="err_json_send_error_head">Error storing transaction on backend server</string>
    <string name="err_json_send_error_tail">A mismatch in the configured API version could be causing this</string>
    <string name="err_json_send_error_unsupported">Perhaps the API of the backend server is not supported by MoLe</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="nav_patterns">Patterns</string>
    <string name="title_activity_patterns">Patterns</string>
    <string name="pattern_regex_hint">Pattern (regular expression)</string>
    <string name="help_menu_item_title">Help</string>
    <string name="edit_button_description">Edit button</string>
</resources>