<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_acc_summary_only_starred"
        android:checkable="true"
        android:checked="false"
        android:title="@string/menu_acc_summary_show_only_starred_title"
        app:actionLayout="@layout/switch_item"
        android:onClick="onShowOnlyStarredClicked"
        app:showAsAction="never" />
    <item android:id="@+id/menu_acc_summary_hide_selected"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/menu_acc_summary_hide_selected_title"
        app:showAsAction="always"
        android:visible="false"
        />
    <item android:id="@+id/menu_acc_summary_cancel_selection"
        android:title="@string/menu_acc_summary_cancel_selection_title"
        app:showAsAction="always"
        android:visible="false"
        android:onClick="onCancelAccSelection"
        android:icon="@drawable/ic_cancel_white_24dp" />
    <item android:id="@+id/menu_acc_summary_confirm_selection"
        android:title="@string/menu_acc_summary_confirm_selection_title"
        app:showAsAction="always"
        android:visible="false"
        android:onClick="onConfirmAccSelection"
        android:icon="@drawable/ic_check_white_24dp" />
</menu>