<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2018 Damyan Ivanov.
  ~ This file is part of MoLe.
  ~ MoLe is free software: you can distribute it and/or modify it
  ~ under the term of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your opinion), any later version.
  ~
  ~ MoLe is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License terms for details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with MoLe. If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:id="@+id/pref_show_only_starred_accounts"
        android:defaultValue="false"
        android:key="pref_show_only_starred_accounts"
        android:summaryOff="@string/pref_show_only_starred_off_summary"
        android:summaryOn="@string/pref_show_only_starred_on_summary"
        android:title="@string/menu_acc_summary_show_only_starred_title" />
</PreferenceScreen>